# v-edit

./: .cursorrules  .gitignore  CMakeLists.txt  Makefile  README.md  REFACTORING_INSTRUCTIONS.md  SaveCreatesBackupFileWithTildeSuffix.txt  TODO.md  buffer.cpp  clipboard.cpp  clipboard.h  clipboard_macro.cpp  clipboard_manager.cpp  clipboard_operations.cpp  cmd_mode.cpp  complex_test_out.txt  copy_paste.cpp  core.cpp  display.cpp  edit.cpp  edit_mode.cpp  editor.h  editor_macros.cpp  file.cpp  file_io.cpp  files.cpp  filter.cpp  help.cpp  input.cpp  key_bindings.cpp  line_buffer.cpp  macro.cpp  macro.h  main.cpp  ops.cpp  parameters.h  refactor_workspace_getters_setters.pl  refactor_workspace_getters_setters.sh  segment.cpp  segment.h  (+7 more)
docs/: AI_Prompt.md  CURRENT_SOURCE_ORGANIZATION.md  Commands.md  Manual.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_OPTION2_COMPLETE.md  REORGANIZATION_OPTION3_COMPLETE.md  Rectangular_Blocks.md  SOURCE_REORGANIZATION_PROPOSAL.md  TODO.md  Testing.md  ve.1
prototype/: README.md  r.cmd.c  r.defs.h  r.display.c  r.edit.c  r.file.c  r.gettc.c  r.macro.c  r.main.c  r.misc.c  r.termcap.c  r.ttyio.c  r.window.c
tests/: CMakeLists.txt  EditorDriver.cpp  EditorDriver.h  TempfileDriver.cpp  TempfileDriver.h  TmuxDriver.cpp  TmuxDriver.h  WorkspaceDriver.cpp  WorkspaceDriver.h  alternative_workspace_test.cpp  area_selection_test.cpp  basic_editing_test.cpp  command_mode_test.cpp  editor_unit_test.cpp  exit_without_save_test.cpp  filter_test.cpp  help_file_test.cpp  horizontal_scroll_editing_test.cpp  horizontal_test.cpp  input_test.cpp  key_handling_integration_test.cpp  multiple_files_test.cpp  rectangular_block_test.cpp  save_and_exit_test.cpp  scroll_vertical_test.cpp  search_test.cpp  segment_test.cpp  segment_unit_test.cpp  session_restore_test.cpp  signal_handling_test.cpp  smoke_tmux_test.cpp  tempfile_unit_test.cpp  virtual_position_test.cpp  workspace_unit_test.cpp
